--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,15 @@
 {
-    "version" : 2,
-    "builds" : [
-        {"src" : "*.js" , "use" : "@vercel/node"}
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
     ],
-    "buildCommand": "n"
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
